--- a/views/cotacao_view.xml
+++ b/views/cotacao_view.xml
@@ -37,25 +37,35 @@
                             <button id="botao" name="carregaproduto" type="object" string="Mostrar" attrs="{'invisible':[('desejado_id','=',False)]}"/>
                         </div>
                         <field name="qnt_desejado" invisible="True" />
-                        <field name="prod_cot_id" options="{'no_create': True, 'no_create_edit':True, 'no_open':True}">
-                            <tree editable="True">
-                                <field name="quantidade_a_levar"/>
-                                <field name="product_id" options="{'no_create': True, 'no_create_edit':True, 'no_open':True}" readonly="True"/>
-                                <field name="custo" readonly="True"/>
-                                <field name="qty_available" readonly="True"/>
-                                <field name="pre_pedido" readonly="True"/>
-                                <field name="valor_total" readonly="True" sum="Valor da cotação"/>
-                            </tree>
-                        </field>
-                        <field name="cotacoes" options="{'no_create': True, 'no_create_edit':True}">
-                            <tree limit="4">
-                                <field name="id"/>
-                                <field name="partner_id"/>
-                                <field name="prod_cot_id" widget="many2many_tags"/>
-                                <field name="data_vencimento"/>
-                            </tree>
-                        </field>
                     </group>
+                    <notebook>
+                        <page string="Produtos Cotados">
+                            <group>
+                                <field name="prod_cot_id" options="{'no_create': True, 'no_create_edit':True, 'no_open':True}" nolabel="1">
+                                    <tree editable="True">
+                                        <field name="quantidade_a_levar"/>
+                                        <field name="product_id" options="{'no_create': True, 'no_create_edit':True, 'no_open':True}" readonly="True"/>
+                                        <field name="custo" readonly="True"/>
+                                        <field name="qty_available" readonly="True"/>
+                                        <field name="pre_pedido" readonly="True"/>
+                                        <field name="valor_total" readonly="True" sum="Valor da cotação"/>
+                                    </tree>
+                                </field>
+                            </group>
+                        </page>
+                        <page string="Cotações Anteriores">
+                            <group>
+                                <field name="cotacoes" options="{'no_create': True, 'no_create_edit':True}" nolabel="1">
+                                    <tree limit="4">
+                                        <field name="id"/>
+                                        <field name="partner_id"/>
+                                        <field name="prod_cot_id" widget="many2many_tags"/>
+                                        <field name="data_vencimento"/>
+                                    </tree>
+                                </field>
+                            </group>
+                        </page>
+                    </notebook>
                     <footer>
                         <button string="Criar Pré Pedido" name="cria_pre_pedido" type="object" attrs="{'invisible':['|',('prod_cot_id','=',[]),('int','=',10)]}" class="btn btn-primary"/>
                         <button string="Mostrar Pré Pedido" name="abre_pre_pedido" type="object" attrs="{'invisible':['|',('prod_cot_id','=',[]),('int','!=',10)]}" class="btn btn-primary"/>
